add a filter to wishlist

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -226,7 +226,7 @@
                 </div>
               </div>
 
-              <div class="support link">
+              <!-- <div class="support link">
                 <img
                   src="/images/emoji/hearts.png"
                   aria-hidden="true"
@@ -246,7 +246,7 @@
                     on Beaker.
                   </p>
                 </div>
-              </div>
+              </div> -->
             </div>
           </section>
 
@@ -257,13 +257,28 @@
               </h2>
 
               <ul class="small-text">
-                {{ range first 3 (where .Pages "Section" "blog") }}
+                <!-- {{ range first 3 (where .Pages "Section" "blog") }}
                 <li>
                   <a class="title" href="{{ .URL }}" class="post">
                     {{ .Title }}
                   </a>
                 </li>
-                {{ end }}
+                {{ end }} -->
+                <li>
+                  <a class="title" href="/blog/im-joining-glitch/"
+                    >I'm joining Glitch!</a
+                  >
+                </li>
+                <li>
+                  <a class="title" href="/blog/i-reorganized-my-kitchen/"
+                    >Tour: I re-organized my kitchen</a
+                  >
+                </li>
+                <li>
+                  <a class="title" href="/blog/im-leaving-beaker/"
+                    >I'm leaving Beaker!</a
+                  >
+                </li>
               </ul>
 
               <a href="/blog" class="btn btn--small small-text">
@@ -302,7 +317,7 @@
                 View all presentations &rarr;
               </a>
             </div>
-            <div class="links-i-love flex">
+            <!-- <div class="links-i-love flex">
               <h2 class="inline-heading">Links I Love</h2>
 
               <ul class="small-text">
@@ -320,7 +335,7 @@
                 </li>
                 <li><a href="https://socialists.nyc">NYC DSA</a></li>
               </ul>
-            </div>
+            </div> -->
           </section>
         </div>
       </div>
