add items to wishlist

--- a/src/scss/pages/wishlist.scss
+++ b/src/scss/pages/wishlist.scss
@@ -1,6 +1,13 @@
 @import "../base/colors";
 @import "../utils/all";
 
+@media (max-width: 600px) {
+  .wishlist-filter {
+    visibility: hidden;
+    height: 0;
+  }
+}
+
 ul.wishlist {
   margin-top: 60px;
 }
