--- a/layouts/index.html
+++ b/layouts/index.html
@@ -79,13 +79,12 @@
 
               <p class="large-text">
                 I'm a software engineer at
-                <a href="https://glitch.com">Glitch</a>. I live in New York
-                City.
+                <a href="https://indeed.com">Indeed</a>. I live in Austin, TX.
               </p>
             </div>
 
             <p>
-              Before Glitch, I worked on
+              I used to work at Glitch. Before Glitch, I worked on
               <a href="https://beakerbrowser.com/about">Beaker</a>, an
               experimental browser that explores what happens when you integrate
               a peer-to-peer protocol into the Web.
