--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -40,15 +40,15 @@
   {{ else }}
   <meta
     name="description"
-    content="Tara Vancil is a software engineer in New York City"
+    content="Tara Vancil is a software engineer in Austin, TX"
   />
   <meta
     property="og:description"
-    content="Tara Vancil is a software engineer in New York City"
+    content="Tara Vancil is a software engineer in Austin, TX"
   />
   <meta
     name="twitter:description"
-    content="Tara Vancil is a software engineer in New York City"
+    content="Tara Vancil is a software engineer in Austin, TX"
   />
   {{ end }}
 
