--- a/layouts/section/projects.html
+++ b/layouts/section/projects.html
@@ -29,7 +29,7 @@
 
     <div class="container medium">
       <main role="main">
-        <h1>Selected projects</h1>
+        <h1>Selected Projects</h1>
 
         <ul class="grid project-screenshots undecorated-list">
           {{ range sort (where .Data.Pages "Section" "projects") .Params.date "desc" }}
